changed teamnames to be default team 1 and 2, and if there is a different name in the database, it will take that one :)

--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -6,11 +6,11 @@
         <div class="row teams mb-2">
             <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team1)"
                 [ngClass]="currentTeam === teamEnum.Team1 ? 'btn selected-team' : ''">
-                Team 1
+                {{teamNames[0]}}
             </button>
             <button class="button btn col-md-5" (click)="switchTeam(teamEnum.Team2)"
                 [ngClass]="currentTeam === teamEnum.Team2 ? 'btn selected-team' : ''">
-                Team 2
+                {{teamNames[1]}}
             </button>
         </div>
         <div class="gap-2 d-flex justify-content-center">
