--- a/src/app/components/cabbingo-board/cabbingo-board.html
+++ b/src/app/components/cabbingo-board/cabbingo-board.html
@@ -48,6 +48,7 @@
                         <div>
                             <div class="progress" style="height: 5px">
                                 <div class="progress-bar bg-success" role="progressbar"
+                                    [style.background-color]="tile.itemsObtained >= tile.itemsRequired ? '#364732!important' : null"
                                     [style.width.%]="(tile.itemsObtained / tile.itemsRequired) * 100"
                                     [attr.aria-valuenow]="tile.itemsObtained" aria-valuemin="0"
                                     [attr.aria-valuemax]="tile.itemsRequired">
