--- a/src/app/components/cabbingo-edit-board/cabbingo-edit-board.html
+++ b/src/app/components/cabbingo-edit-board/cabbingo-edit-board.html
@@ -1,7 +1,7 @@
 <div class="page-wrap">
   <div class="banner"></div>
   <div class="d-flex justify-content-center">
-    <div class="osrs-border-thick px-5 py-4 mb-5 d-flex flex-column justify-content-between" style="height:auto">
+    <div class="osrs-border-thick-login px-5 py-4 mb-5 d-flex flex-column justify-content-between" style="height:auto">
       <div class="d-flex justify-content-center">
         @if(!sessionService.session.authenticated){
         <form style="width:500px;">
