Revert "fixed an oopsie!"
This reverts commit 9143e77127eb21a1fe108959fa9e8f1404f331b2.

--- a/src/app/components/cabbingo-stats/cabbingo-stats.html
+++ b/src/app/components/cabbingo-stats/cabbingo-stats.html
@@ -65,7 +65,7 @@
                             <img src="assets/prizepool.png" height="25" class="me-2" /> Prize pool
                         </h3>
                         <h3 class="d-flex justify-content-center align-items-center align-content-center p-0 m-0">
-                            {{prizePool | number:'1.0-0'}} GP
+                            {{prizePool | number:'1.0-0'}}
                         </h3>
                     </div>
                 </div>
